--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,16 @@
-$green: #3eaf7c;
-$lightgreen: #6cb695;
+$green: #27ae60;
+$lightgreen: #2ecc71;
+$darkred: #e74c3c;
+$red: #c0392b;
+$orange: #f39c12;
+
 $border: 1px solid #eaecef;
+
+$grey: #bdc3c7;
+$dark-grey: #7f8c8d;
+
+$font-color: #2c3e50;
+$font-color2: #34495e;
 
 :export {
   green: $green;
