--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,7 +1,7 @@
 $green: #27ae60;
 $lightgreen: #2ecc71;
-$darkred: #e74c3c;
-$red: #c0392b;
+$red: #e74c3c;
+$darkred: #c0392b;
 $orange: #f39c12;
 
 $border: 1px solid #eaecef;
