--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,13 +1,13 @@
 @import './variables';
 
-.el-button--primary{
-  background-color: $green;
-  border-color: $green;
-}
 .el-button--primary:hover,
 .el-button--primary:focus,
 .el-button--primary:active {
   background: $lightgreen;
   border-color: $lightgreen;
   color: #FFFFFF;
+}
+
+.el-table th, .el-table td{
+  text-align: center;
 }
