增加canvas画图页面

--- a/src/style/element-variables.scss
+++ b/src/style/element-variables.scss
@@ -1,5 +1,32 @@
+@import './variables';
+
 /* 改变主题色变量 */ 
-$--color-primary: #27ae60;
+$--color-primary: $green;
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: '~element-plus/lib/theme-chalk/fonts'; @import
 "~element-plus/packages/theme-chalk/src/index";
+
+.el-menu{
+  border: none;
+  text-align: left;
+}
+.el-submenu.is-active >.el-submenu__title{
+  color: $green;
+}
+.el-menu-item:hover, .el-menu-item:focus,
+.el-submenu__title:hover, .el-submenu__title:focus {
+  background-color: #fff;
+  color: $green;
+}
+
+.el-button--primary:hover,
+.el-button--primary:focus,
+.el-button--primary:active {
+  background: $lightgreen;
+  border-color: $lightgreen;
+  color: #FFFFFF;
+}
+
+.el-table th, .el-table td{
+  text-align: center;
+}
